# qtcreator-tabbededitor-plugin

./: .gitignore  CMakeLists.txt  plugin.cpp  tabbar.cpp  tabbar.h
